--- a/formAlterar.html
+++ b/formAlterar.html
@@ -5,9 +5,11 @@
         <title>Alterando</title>        
         <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
         <script src="http://www.w3schools.com/lib/w3data.js"></script>
-        <script src="./node_modules/jquery/dist/jquery.min.js"></script>
+        <!-- <script src="./node_modules/jquery/dist/jquery.min.js"></script> -->
+        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular-route.js"></script>
     </head>
-    <body onload="carregaDadosCliente()">
+    <body  ng-app="updateCliente" ng-controller="updateCtrl">
         <div w3-include-html="menu.html"></div> 
         <h2></h2>
         <div class="container">
@@ -21,27 +23,27 @@
                         
                         <div class="form-group">
                             <label for="nome">Nome:</label>
-                            <input class="form-control" type="text" name="nome" id="nome" required="true"/>
+                            <input class="form-control" type="text" name="nome" id="nome" value={{cliente.nome}} required="true"/>
                         </div>
                         <div class="form-group">
                             <label for="idade">Idade:</label>
-                            <input class="form-control" type="number" name="idade" id="idade" required="true"/>
+                            <input class="form-control" type="number" name="idade" id="idade" value={{cliente.idade}} required="true"/>
                         </div>
                         <div class="form-group">
                             <label for="sexo">Sexo:</label>
-                            <input class="form-control" type="text" maxlength="1" name="sexo" id="sexo" required="true"/>
+                            <input class="form-control" type="text" maxlength="1" name="sexo" id="sexo" value={{cliente.sexo}} required="true"/>
                         </div>
                         <div class="form-group">
                             <label for="dataNascimento">Data de Nascimento:</label>
-                            <input class="form-control" type="date" name="dataNascimento" id="dataNascimento" required="true"/>
+                            <input class="form-control" type="date" name="dataNascimento" id="dataNascimento" value={{cliente.dataNascimento}} required="true"/>
                         </div>
                         <div class="form-group">
                             <label for="email">Email address:</label>
-                            <input class="form-control" type="email" name="email" id="email" required="true"/>
+                            <input class="form-control" type="email" name="email" id="email" value={{cliente.email}} required="true"/>
                         </div>
                         <div class="form-group">
                             <label for="endereco">Endereço:</label>
-                            <input class="form-control" type="text" name="endereco" id="endereco" required="true"/>
+                            <input class="form-control" type="text" name="endereco" id="endereco" value={{cliente.endereco}} required="true"/>
                         </div>
                         
                         <div class="text-right">
@@ -62,29 +64,26 @@
                 return results === null ? '' : decodeURIComponent(results[1].replace(/\+/g, ' '));
             };
 
-            function carregaDadosCliente() {
-                var id = getUrlParameter('id');
-                $("#id").val(id);
-                var url=`backend/cliente.php?id=${id}`;
-                $.ajax({
-                    url: url,
-                    cache: false,
-                    dataType: "json",                   
-                    success: function(retorno) {
-                        if (retorno.erro) {
-                            $("h2").html(retorno.erro);
-                        } else {
-                            $("#nome").val(retorno.nome);
-                            $("#idade").val(retorno.idade);
-                            $("#sexo").val(retorno.sexo);
-                            $("#dataNascimento").val(retorno.dataNascimento);
-                            $("#email").val(retorno.email);
-                            $("#endereco").val(retorno.endereco);
-                        }
+            var app = angular.module("updateCliente", ["ngRoute"]);
+            app.controller("updateCtrl", function($scope, $http, $routeParams) {
+                // $scope.cliente =  {
+                //             id:15, 
+                //             nome:"Fulano", 
+                //             idade:50, 
+                //             sexo:"M", 
+                //             dataNascimento: '1968-01-01',
+                //             email:'fulano@uol',
+                //             endereco:'sdkajshdjk' 
+                // };
 
-                    }
-                });
-            }
+                $http.get("/backend/cliente.php", 
+                            {params: { id : $routeParams.id}} )
+                        .then(function(resposta) {
+                            $scope.cliente = resposta.data
+                            alert($scope.cliente)
+                        })
+
+            })
         </script>
 
     </body>
