CRUD server working. Augmenting and refactoring of UI

--- a/public/listar.html
+++ b/public/listar.html
@@ -32,6 +32,7 @@
                             <td>
                                 <a href="" ng-click='delete(x._id)' class='btn btn-danger'>Deletar</a> 
                                 <a ng-href="#!alterar/{{x._id}}" class='btn btn-primary'>Alterar</a> 
+                                <a ng-href="#!listarPedidos/{{x._id}}" class='btn btn-primary'>Listar Pedidos</a> 
                             </td>
                         </tr>
                     </tbody>                 
