--- a/formAlterar.html
+++ b/formAlterar.html
@@ -15,23 +15,23 @@
                     </div>
                     <div class="form-group">
                         <label for="idade">Idade:</label>
-                        <input class="form-control" type="number" name="idade" id="idade" ng-model="cliente.idade" required="true"/>
+                        <input class="form-control" type="number" name="idade" id="idade" ng-model="cliente.idade" />
                     </div>
                     <div class="form-group">
                         <label for="sexo">Sexo:</label>
-                        <input class="form-control" type="text" maxlength="1" name="sexo" id="sexo" ng-model="cliente.sexo" required="true"/>
+                        <input class="form-control" type="text" maxlength="1" name="sexo" id="sexo" ng-model="cliente.sexo" />
                     </div>
                     <div class="form-group">
                         <label for="dataNascimento">Data de Nascimento:</label>
-                        <input class="form-control" type="date" name="dataNascimento" id="dataNascimento" ng-model="cliente.dataNascimento"  required="true"/>
+                        <input class="form-control" type="date" name="dataNascimento" id="dataNascimento" ng-model="cliente.dataNascimento" />
                     </div>
                     <div class="form-group">
                         <label for="email">Email address:</label>
-                        <input class="form-control" type="email" name="email" id="email" ng-model="cliente.email" required="true"/>
+                        <input class="form-control" type="email" name="email" id="email" ng-model="cliente.email"/>
                     </div>
                     <div class="form-group">
                         <label for="endereco">Endereço:</label>
-                        <input class="form-control" type="text" name="endereco" id="endereco" ng-model="cliente.endereco" required="true"/>
+                        <input class="form-control" type="text" name="endereco" id="endereco" ng-model="cliente.endereco" />
                     </div>
                     
                     <div class="text-right">
