--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
 
         <p><a href="/">Main</a></p>
 
-        <ng-view></ng-view>
+        <ng-view>      </ng-view>
 
         <script>
             var app = angular.module('clientesApp', ["ngRoute"]);
@@ -51,7 +51,7 @@
                 
                 //FUNCAO QUE ATUALIZA LISTA
                 $scope.refresh = function() {
-                    $http.get("backend/listar.php")
+                    $http.get("/clientes")
                     .then(function success(response) {
                         $scope.clientes = response.data
                     }, function error(response) {
