Completando melhor exemplo

--- a/public/listarPedidos.html
+++ b/public/listarPedidos.html
@@ -21,8 +21,8 @@
                             <td>{{ x.quantidade }}</td>
                             <td>{{ x.frete }}</td>
                             <td>
-                                <a href="" ng-click='deletePedido(x._id)' class='btn btn-danger'>Deletar</a> 
-                                <a ng-href="#!alterarPedido/{{x._id}}" class='btn btn-primary'>Alterar</a> 
+                                <a href="" ng-click='delete(x._id)' class='btn btn-danger'>Deletar</a> 
+                                <!-- <a ng-href="#!alterarPedido/{{x._id}}" class='btn btn-primary'>Alterar</a>  -->
                             </td>
                         </tr>
                     </tbody>                 
